# IM

./: .gitignore  README.md  table.sql
IMserver/IM/: CMakeLists.txt  server.cc
IMserver/IM/IM_login/: IM_login.pb.cc  IM_login.pb.h  IM_login.proto
IMserver/IM/asyncexecutorpool/: async_executor_pool.cc  async_executor_pool.h  mysql_connetion_pool.cc  mysql_connetion_pool.h  redis_connection_pool.cc  redis_connection_pool.h
IMserver/IM/asyncserver/: asyncserver.cc  asyncserver.h
client/: AddFriend.qml  ChatDialog.qml  ChatList.qml  CustomDialog.qml  CustomMenu.qml  ExecutingModal.qml  FriendList.qml  IM_login.pb.cc  IM_login.pb.h  IM_login.proto  LeftChoiceColumn.qml  Login.qml  MainControl.qml  MessagePopup.qml  NewIM.pro  PersonalInfoDialog.qml  PictureView.qml  Register.qml  TaskList.md  TitleBar.qml  VerifyDia.qml  ViewTitle.qml  customizequickwidget.cpp  customizequickwidget.h  generalimageprovider.cpp  generalimageprovider.h  imagemanager.cpp  imagemanager.h  imageprovider.cpp  imageprovider.h  login.cpp  login.h  main.cpp  networkmanager.cpp  networkmanager.h  qml.qrc  register_dialog.cpp  register_dialog.h  res.qrc  sqlitemanager.cpp  (+5 more)
client/ChatState/: addfriend.cpp  addfriend.h  chatdialog.cpp  chatdialog.h  chatdialogmodel.cpp  chatdialogmodel.h  chatlist.cpp  chatlist.h  chatlistmodel.cpp  chatlistmodel.h  chatstate.cpp  chatstate.h  customdialog.cpp  customdialog.h  emojiimageprovider.cpp  emojiimageprovider.h  emojimodel.cpp  emojimodel.h  personalinfodialog.cpp  personalinfodialog.h  searchmodel.cpp  searchmodel.h  storeemoji.cpp  storeemoji.h
(+10 files in other folders)
